--- a/Week13/jsdom.css
+++ b/Week13/jsdom.css
@@ -44,11 +44,7 @@ nav a{
     height: 100px;
     background-color: greenyellow;    
 }
-.boxB{
-    width: 50px;
-    height: 50px;
-    background-color: lightblue;
-}
+
 #para1{
     background-color: light-blue;
 }
@@ -57,9 +53,16 @@ font-size: 0.75em;
 clear: both;
 text-align: center;
 }
+
 button{
     padding: 10px;
     background-color: darkblue;
     color: white;    
     font-size: 14px;
+}
+.green
+{
+    font-size: 16px;
+    font-weight: bold;
+    font-color: darkgreen;
 }
